<resources>
    <string name="app_name">TeacherAssistant</string>

    <!-- Start Menu-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StartMenuTitle"><b>Teacher Assisstant</b></string>
    <string name="GTCoursesButton">Courses</string>
    <string name="GTStudentsButton">Students</string>
    <string name="GTRaportButton">Raport</string>

    <!-- Add Edit Student -->
    <string name="AEditStudentTextView"><b>Custom your student</b></string>
    <string name="NameStudentHint">Name</string>
    <string name="SurnameStudentHint">Surname</string>

    <!--ADD Edit Course -->
    <string name="AEditCourseTextView"><b>Add / Edit course</b></string>
    <string name="NameCourseHit">course name</string>

    <!--ADD Grade  -->
    <string name="GradeTextView"><b>Wybierz ocenę</b></string>
    <string name="DescriptionTextView"><b>Wpisz Opis</b></string>
    <string name="DescriptionHint">Opis</string>
    <string name="AproveButton">Potwierdź</string>
    <string-array name="SpinnerNumbers">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- Grade View -->
    <string name="GradeViewStudentTitle">Student</string>
    <string name="GradeViewDescription">Opis</string>
    <!-- One row student list -->
    <string name="ShowGradesStudentButton">Oceny</string>

    <!--One row courses list -->
    <string name="ShowStudentsButton">students</string>

    <!--One row student course-->
    <string name="AddGradeButton">Add Grade</string>

    <!--One row add student to course -->
    <string name="AddStudentToCourseButton">Add</string>

    <!--One row grade view -->
    <string name="ShowDetailsGrade">Pokaż</string>


</resources>