<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.StartMenu">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/GTRaportButton"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/gradient_button"
        android:text="@string/GTRaportButton"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:letterSpacing="0.5"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/GTStudentsButton"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/gradient_button"
        android:text="@string/GTStudentsButton"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:letterSpacing="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/GTCoursesButton"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/gradient_button"
        android:text="@string/GTCoursesButton"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:letterSpacing="0.5"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/StartMenuTItle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartMenuTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintVertical_bias="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>